# swagger.yaml
@@ -8,7 +8,7 @@ info:
     email: ilian@star.global
   version: 1.0.0-oas3
 servers:
-  - url: /
+  - url: https://hotel-booking-server-api.herokuapp.com/
 tags:
   - name: test
     description: Test routes
@@ -25,7 +25,7 @@ paths:
       responses:
         "200":
           description: Hello World
-  /user:
+  /api/v1/user:
     get:
       tags:
         - user
@@ -39,6 +39,56 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/User'
+  /api/v1/user/signup:
+    post:
+      tags:
+        - user
+      summary: Sign up a new user
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserRegistration'
+            example:
+              name: John
+              email: jonh@gmail.com
+              password: qwerty
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+        "400":
+          description: user already exists
+  /api/v1/user/login:
+    post:
+      tags:
+        - user
+      summary: Login a user to get a JWT token
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserAuthorization'
+            example:
+              email: jonh@gmail.com
+              password: qwerty
+      responses:
+        "200":
+          description: successful operation
+          headers:
+            Jwt-Authorization:
+              description: A token for subsequent requests
+              style: simple
+              explode: false
+              schema:
+                type: string
+        "404":
+          description: there is no user with this email and password
   /hotel:
     get:
       tags:
@@ -78,4 +128,20 @@ components:
         city:
           type: string
       xml:
-        name: User
+        name: Hotel
+    UserRegistration:
+      type: object
+      properties:
+        name:
+          type: string
+        email:
+          type: string
+        password:
+          type: string
+    UserAuthorization:
+      type: object
+      properties:
+        email:
+          type: string
+        password:
+          type: string
